[package]
name = "dagbog"
authors = ["Nikolaj J-K"]
description = "Redskab til at holde en dagbog"
repository = "https://github.com/jehaj/dagbog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.0"
tokio = { version = "1.35.0", features = ["full"] }
handlebars = "5.0.0"
serde_json = "1.0"
serde = { version = "1.0.0", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
chrono = "0.4.0"
num-traits = "0.2.0"
